--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,7 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+# home:
+#   path: /home
+#   controller: App\Controller\TestController::hello
+              # App\Controller\TestController@hello version laravel
